ontopia/src/test-data/ltm/error/reify-collision.ltm
#TOPICMAP ~tm
[tm = "A test topic map" ~tm]
